typegraph/core/tests/snapshots/test_sdks__typegraphs__types.snap
---
source: typegraph/core/tests/test_sdks.rs
expression: tg
input_file: typegraph/core/tests/typegraphs/types.py
---
[
  {
    "$id": "https://metatype.dev/specs/0.0.1.json",
    "types": [
      {
        "type": "object",
        "title": "test-types",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "one": 1,
          "two": 6,
          "three": 11
        },
        "required": [
          "one",
          "two",
          "three"
        ]
      },
      {
        "type": "function",
        "title": "func_9",
        "runtime": 0,
        "policies": [],
        "config": {},
        "input": 2,
        "output": 5,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_2",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "a": 3,
          "b": 4
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_0",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "integer",
        "title": "integer_1",
        "runtime": 0,
        "policies": [],
        "config": {},
        "minimum": 12
      },
      {
        "type": "integer",
        "title": "integer_3",
        "runtime": 0,
        "policies": [],
        "config": {},
        "minimum": 12,
        "maximum": 43
      },
      {
        "type": "function",
        "title": "func_10",
        "runtime": 0,
        "policies": [],
        "config": {},
        "input": 7,
        "output": 9,
        "materializer": 1,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_6",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "id": 8,
          "post": 9
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_4",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "object",
        "title": "object_8",
        "runtime": 0,
        "policies": [],
        "config": {},
        "properties": {
          "id": 10,
          "author": 7
        },
        "required": []
      },
      {
        "type": "integer",
        "title": "integer_7",
        "runtime": 0,
        "policies": [],
        "config": {}
      },
      {
        "type": "function",
        "title": "func_11",
        "runtime": 0,
        "policies": [],
        "config": {},
        "input": 2,
        "output": 2,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      }
    ],
    "materializers": [
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=()=>12;"
        }
      },
      {
        "name": "function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "script": "var _my_lambda=user=>({id:12,user});"
        }
      },
      {
        "name": "import_function",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "mod": 3,
          "name": "three",
          "secrets": []
        }
      },
      {
        "name": "module",
        "runtime": 0,
        "effect": {
          "effect": "none",
          "idempotent": true
        },
        "data": {
          "code": "export function three({a,b},{context}){return{a:0,b:0};}"
        }
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default"
        }
      }
    ],
    "policies": [],
    "meta": {
      "secrets": [],
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": false,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.1"
    }
  }
]
